# smbldap-tools-php

./: .env.example  CheckJWT.class.php  README.md  compile-php-debian.sh  composer.json  debian-setup.sh  index.php  miniserver.php  phpstan.neon  rector.php  samba.ldif  smb.conf  smbldap_bind.conf  test_miniserver.sh  ubuntu-jammy-post-install.sh
.devcontainer/: devcontainer.json
app/Crypt/: SmbHash.php
app/Http/: Kernel.php
app/Ldap/: User.php
app/Miniserver/: Shadow.php  TcpBuilder.php
app/Unix/: Passwd.php  Shadow.php
config/: auth.php  ldap.php
features/ldap-auth/: devcontainer-feature.json  install.sh  smb.conf
miniserver/: .gitignore  __main__.py  pyproject.toml  requirements.txt  shadow.py
miniserver/exceptions/: shadow.py
miniserver/linux/: crypt.py  exceptions.py  shadow.py  signal.py  tcp.py
miniserver/miniserver/: shadow.py
miniserver/miniserver/exceptions/: shadow.py
miniserver/miniserver/linux/: crypt.py  exceptions.py  shadow.py  signal.py  tcp.py
miniserver/miniserver/models/: base.py  shadow.py
miniserver/miniserver/models/enum/: action.py
miniserver/miniserver/utils/: logger.py
miniserver/models/: shadow.py
miniserver/models/tcp/: error.py  response.py
miniserver/tests/: main.py  miniclient.py  test_miniserver.py  test_yescrypt.py
miniserver/utils/: logger.py
python/crypto/: shadow.py
python/linux/: tcp.py
resources/views/: chpasswd.blade.php  dashboard.blade.php  layout.blade.php  login.blade.php  welcome.blade.php
routes/: web.php
templates/: index.php  login.php
tests/Feature/: LdapLoginTest.php
(+5 files in other folders)
