[tool.poetry]
name = "miniserver"
version = "1.0.0"
description = "mini chpasswd TCP server"
authors = ["gaspard-v <60385905+gaspard-v@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
